--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 <body class="bg-slate-900 text-gray-100 min-h-screen p-4">
     <div class="max-w-4xl mx-auto py-8">
         <div class="mb-8">
-            <a href="/index.html"
+            <a href="/"
                 class="text-gray-400 hover:text-gray-200 transition-colors duration-200 inline-flex items-center gap-2 mb-4">
                 <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
