editing files on mobile kinda sucks

--- a/projects.html
+++ b/projects.html
@@ -29,11 +29,11 @@
             <div class="bg-slate-800 rounded-lg p-6 hover:bg-slate-750 transition-colors duration-200">
                 <div class="flex flex-col md:flex-row md:items-start md:justify-between gap-4">
                     <div class="flex-1">
-                        <h2 class="text-2xl font-bold mb-2">XToolBox [🪦]</h2>
+                        <h2 class="text-2xl font-bold mb-2">XToolBox</h2>
                         <p class="text-gray-300 mb-4">A Windows 10/11 optimization utility.</p>
                         <div class="flex flex-wrap gap-2">
-                            <img src="https://img.shields.io/badge/Python-3776AB?style=flat-square&logo=python&logoColor=white"
-                                alt="Language: Python" />
+                            <img src="https://img.shields.io/badge/Dart-0175C2?style=flat-square&logo=dart&logoColor=white"
+                                alt="Language: Dart" />
                             <img src="https://img.shields.io/github/stars/nyxiereal/xtoolbox?style=flat-square&logo=github"
                                 alt="GitHub Stars" />
                             <img src="https://img.shields.io/github/downloads/nyxiereal/xtoolbox/total?style=flat-square&logo=github"
@@ -147,6 +147,27 @@
                         </div>
                     </div>
                     <a href="https://github.com/nyxiereal/nfitness"
+                        class="px-4 py-2 bg-gray-700 hover:bg-gray-600 rounded-lg transition-colors duration-200 font-medium text-center whitespace-nowrap">
+                        View on GitHub
+                    </a>
+                </div>
+            </div>
+
+            <div class="bg-slate-800 rounded-lg p-6 hover:bg-slate-750 transition-colors duration-200">
+                <div class="flex flex-col md:flex-row md:items-start md:justify-between gap-4">
+                    <div class="flex-1">
+                        <h2 class="text-2xl font-bold mb-2">pekky</h2>
+                        <p class="text-gray-300 mb-4">An alternative application for the PEKA system.</p>
+                        <div class="flex flex-wrap gap-2">
+                            <img src="https://img.shields.io/badge/Dart-0175C2?style=flat-square&logo=dart&logoColor=white"
+                                alt="Language: Dart" />
+                            <img src="https://img.shields.io/github/stars/nyxiereal/pekky?style=flat-square&logo=github&color=yellow"
+                                alt="GitHub Stars" />
+                            <img src="https://img.shields.io/github/downloads/nyxiereal/pekky/total?style=flat-square&logo=github"
+                                alt="Downloads" />
+                        </div>
+                    </div>
+                    <a href="https://github.com/nyxiereal/pekky"
                         class="px-4 py-2 bg-gray-700 hover:bg-gray-600 rounded-lg transition-colors duration-200 font-medium text-center whitespace-nowrap">
                         View on GitHub
                     </a>
