--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nyx (real)</title>
+
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Nyx" />
+  <meta name="description" content="foss software engineer" />
+  <meta property="og:description" content="foss software engineer" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Flex:wght@100..900&display=swap" rel="stylesheet">
